--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <title>booki</title>
    <script src="https://kit.fontawesome.com/1ac37ce82c.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="css/style.css" type="text/css">
+   <meta name="viewport" content="width=device-width"/>
 </head>
 
 <body>
@@ -78,7 +79,7 @@
 
             <div class="all">
                <section class="section1">
-                  <h2 id="HébergementsàMarseille">Hébergements à Marseille</h1>
+                  <h2 id="HébergementsàMarseille">Hébergements à Marseille</h2>
 
                   <div id="col">
 
@@ -98,8 +99,9 @@
                               <i class="fa-solid fa-star"></i>
                               <i class="fa-solid fa-star empty-star"></i>
                            </div>
+                        </a>
                      </article>
-                     </a>
+                     
 
 
                      <article class="cardsheb">
@@ -117,7 +119,8 @@
                               <i class="fa-solid fa-star"></i>
                               <i class="fa-solid fa-star empty-star"></i>
                            </div>
-                     </article></a>
+                        </a>
+                     </article>
 
                      <article class="cardsheb">
                         <a href="lien">
@@ -134,7 +137,8 @@
                               <i class="fa-solid fa-star"></i>
                               <i class="fa-solid fa-star empty-star"></i>
                            </div>
-                     </article></a>
+                        </a>
+                     </article>
 
                      <article class="cardsheb">
                         <a href="lien">
@@ -151,7 +155,8 @@
                               <i class="fa-solid fa-star"></i>
                               <i class="fa-solid fa-star empty-star"></i>
                            </div>
-                     </article></a>
+                        </a>
+                     </article>
 
                      <article class="cardsheb">
                         <a href="lien">
@@ -168,7 +173,8 @@
                               <i class="fa-solid fa-star"></i>
                               <i class="fa-solid fa-star empty-star"></i>
                            </div>
-                     </article></a>
+                        </a>
+                     </article>
 
                      <article class="cardsheb">
                         <a href="lien">
@@ -185,9 +191,10 @@
                               <i class="fa-solid fa-star"></i>
                               <i class="fa-solid fa-star empty-star"></i>
                            </div>
+                        </a>
                      </article>
                   </div>
-               </a>
+               
 
                   <h2 class="showmore"><a href="show">
                         Afficher plus</a>
