--- a/index.html
+++ b/index.html
@@ -31,15 +31,11 @@
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <h2>En plein centre-ville ou en pleine nature</h2>
 
-            <div class="searching">
-               <label><i class="fa-solid fa-location-dot"></i></label>
-               <form>
-                  <input type="search" id="search" name="search" placeholder="Marseille, France">
-               </form>
-               <button type="submit" id="busearch">
-                  <span id="busearchspan">Rechercher</span>
-               </button>
-            </div>
+            <form class="searching">
+               <i class="fa-solid fa-location-dot"></i>
+               <input class="search__bar" type="search" name="recherche" placeholder="Marseille, France">
+               <input class="buttonsearch" type="submit" value="Rechercher"><i class="fa-solid fa-magnifying-glass"></i>
+           </form>
 
             <!--section filtres-->
             <article class="article2">
