--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <div id="col">
 
                      <article class="cardsheb">
-                        <a href="lien">
+                        <a href="https://www.google.com">
                            <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/aubergecanebière.jpg"
                               alt="Auberge La Canebière">
 
