media phone and tablette

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>booki</title>
    <script src="https://kit.fontawesome.com/1ac37ce82c.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="css/style.css" type="text/css">
-   <meta name="viewport" content="width=device-width"/>
+   <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
                <i class="fa-solid fa-location-dot"></i>
                <input class="search__bar" type="search" name="recherche" placeholder="Marseille, France">
                <input class="buttonsearch" type="submit" value="Rechercher"><i class="fa-solid fa-magnifying-glass"></i>
-           </form>
+            </form>
 
             <!--section filtres-->
             <article class="article2">
@@ -97,7 +97,7 @@
                            </div>
                         </a>
                      </article>
-                     
+
 
 
                      <article class="cardsheb">
@@ -174,7 +174,8 @@
 
                      <article class="cardsheb">
                         <a href="lien">
-                           <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                           <img class="imgheb"
+                              src="Images/ImagesBooki/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                               alt="Hôtel Chez Amina">
                            <div class="content">
                               <h3 class="titlecard">Hôtel Chez Amina</h3>
@@ -190,7 +191,7 @@
                         </a>
                      </article>
                   </div>
-               
+
 
                   <h2 class="showmore"><a href="show">
                         Afficher plus</a>
